{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 116,
  "lineage": "b7a72544-5f00-eaf5-741c-c8948ea0b912",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-east-west-multi-tenant",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-11-30T05:09:24.324-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/host-project-1669813646/global/firewalls/allow-east-west-multi-tenant",
            "log_config": [],
            "name": "allow-east-west-multi-tenant",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-multi-tenant",
            "priority": 1000,
            "project": "host-project-1669813646",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/firewalls/allow-east-west-multi-tenant",
            "source_ranges": [
              "192.168.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "east-west"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_multi_tenant",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-east-west-shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-11-30T05:09:24.105-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/host-project-1669813646/global/firewalls/allow-east-west-shared",
            "log_config": [],
            "name": "allow-east-west-shared",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-shared",
            "priority": 1000,
            "project": "host-project-1669813646",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/firewalls/allow-east-west-shared",
            "source_ranges": [
              "192.168.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "east-west"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_shared",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-east-west-single-tenant",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-11-30T05:09:37.700-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/host-project-1669813646/global/firewalls/allow-east-west-single-tenant",
            "log_config": [],
            "name": "allow-east-west-single-tenant",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-single-tenant",
            "priority": 1000,
            "project": "host-project-1669813646",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/firewalls/allow-east-west-single-tenant",
            "source_ranges": [
              "192.168.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "east-west"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_single_tenant",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-north-south",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-11-30T09:33:23.416-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/host-project-1669813646/global/firewalls/allow-north-south",
            "log_config": [],
            "name": "allow-north-south",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-externo",
            "priority": 1000,
            "project": "host-project-1669813646",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/firewalls/allow-north-south",
            "source_ranges": [
              "192.168.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "north-south"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_externo",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh-vpc-externo",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-30T05:09:36.422-08:00",
            "deny": [],
            "description": "allows ssh connections from the internet to host on the external subnet (subnet-a)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/host-project-1669813646/global/firewalls/allow-ssh-vpc-externo",
            "log_config": [],
            "name": "allow-ssh-vpc-externo",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-externo",
            "priority": 1000,
            "project": "host-project-1669813646",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/firewalls/allow-ssh-vpc-externo",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-mgmt"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_externo",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh-vpc-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-30T05:09:39.013-08:00",
            "deny": [],
            "description": "allows ssh connections from jumphost to virtual machines in service projects",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/host-project-1669813646/global/firewalls/allow-ssh-vpc-mgmt",
            "log_config": [],
            "name": "allow-ssh-vpc-mgmt",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-mgmt",
            "priority": 1000,
            "project": "host-project-1669813646",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/firewalls/allow-ssh-vpc-mgmt",
            "source_ranges": [
              "172.16.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-mgmt"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_mgmt",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "client-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221121",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/zones/us-central1-a/disks/client-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/host-project-1669813646/zones/us-central1-a/instances/client-a",
            "instance_id": "8624993442548339031",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "startup-script": "        #!/bin/bash\n        apt update -y\n        apt install -y net-tools traceroute\n"
            },
            "metadata_fingerprint": "9LvuvtpoUD0=",
            "name": "client-a",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-externo",
                "network_ip": "192.168.10.20",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-a",
                "subnetwork_project": "host-project-1669813646"
              }
            ],
            "project": "host-project-1669813646",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/zones/us-central1-a/instances/client-a",
            "service_account": [
              {
                "email": "192924514483-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "north-south",
              "ssh-mgmt"
            ],
            "tags_fingerprint": "fSekJae0ZgA=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_externo",
            "google_compute_shared_vpc_host_project.host_project",
            "google_compute_subnetwork.subnet-a",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jumphost",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221121",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/zones/us-central1-a/disks/jumphost"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/host-project-1669813646/zones/us-central1-a/instances/jumphost",
            "instance_id": "4876689313400285387",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "startup-script": "        #!/bin/bash\n        apt update -y\n        apt install -y net-tools traceroute\n"
            },
            "metadata_fingerprint": "9LvuvtpoUD0=",
            "name": "jumphost",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-externo",
                "network_ip": "192.168.10.15",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-a",
                "subnetwork_project": "host-project-1669813646"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-mgmt",
                "network_ip": "172.16.10.15",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-mgmt",
                "subnetwork_project": "host-project-1669813646"
              }
            ],
            "project": "host-project-1669813646",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/zones/us-central1-a/instances/jumphost",
            "service_account": [
              {
                "email": "192924514483-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh-mgmt"
            ],
            "tags_fingerprint": "ck5tqzPTXnU=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_externo",
            "google_compute_network.vpc_mgmt",
            "google_compute_shared_vpc_host_project.host_project",
            "google_compute_subnetwork.subnet-a",
            "google_compute_subnetwork.subnet-mgmt",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nginx-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221121",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/svc-c-1669813646/zones/us-central1-a/disks/nginx-c"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/svc-c-1669813646/zones/us-central1-a/instances/nginx-c",
            "instance_id": "5455247594587089098",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "enable-oslogin": "TRUE",
              "startup-script": "        #!/bin/bash\n        apt update -y\n        apt install -y nginx net-tools traceroute\n"
            },
            "metadata_fingerprint": "ImPHHgA95j4=",
            "name": "nginx-c",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-shared",
                "network_ip": "192.168.30.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-c",
                "subnetwork_project": "host-project-1669813646"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-mgmt",
                "network_ip": "172.16.30.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-mgmt",
                "subnetwork_project": "host-project-1669813646"
              }
            ],
            "project": "svc-c-1669813646",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/svc-c-1669813646/zones/us-central1-a/instances/nginx-c",
            "service_account": [
              {
                "email": "594576367202-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "east-west",
              "nginx",
              "north-south",
              "ssh-mgmt"
            ],
            "tags_fingerprint": "d-4WKOZmu-w=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_instance.vm-firewall",
            "google_compute_network.vpc_externo",
            "google_compute_network.vpc_mgmt",
            "google_compute_network.vpc_multi_tenant",
            "google_compute_network.vpc_shared",
            "google_compute_network.vpc_single_tenant",
            "google_compute_shared_vpc_host_project.host_project",
            "google_compute_subnetwork.subnet-a",
            "google_compute_subnetwork.subnet-b",
            "google_compute_subnetwork.subnet-c",
            "google_compute_subnetwork.subnet-e",
            "google_compute_subnetwork.subnet-h",
            "google_compute_subnetwork.subnet-mgmt",
            "google_folder.default",
            "google_project_organization_policy.ip_forward_policy",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding",
            "module.service_project_c.data.google_bigquery_default_service_account.bq_sa",
            "module.service_project_c.data.google_project.project",
            "module.service_project_c.data.google_storage_project_service_account.gcs_sa",
            "module.service_project_c.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.service_project_c.google_compute_shared_vpc_service_project.service_projects",
            "module.service_project_c.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.service_project_c.google_project.project",
            "module.service_project_c.google_project_organization_policy.boolean",
            "module.service_project_c.google_project_organization_policy.list",
            "module.service_project_c.google_project_service.project_services",
            "module.service_project_c.google_project_service_identity.jit_si"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nginx-d",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221121",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/svc-d-1669813646/zones/us-central1-a/disks/nginx-d"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/svc-d-1669813646/zones/us-central1-a/instances/nginx-d",
            "instance_id": "6164453906130331851",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "enable-oslogin": "TRUE",
              "startup-script": "        #!/bin/bash\n        apt update -y\n        apt install -y nginx net-tools traceroute\n"
            },
            "metadata_fingerprint": "F__j2UmwIV8=",
            "name": "nginx-d",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-shared",
                "network_ip": "192.168.40.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-d",
                "subnetwork_project": "host-project-1669813646"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-mgmt",
                "network_ip": "172.16.40.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-mgmt",
                "subnetwork_project": "host-project-1669813646"
              }
            ],
            "project": "svc-d-1669813646",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/svc-d-1669813646/zones/us-central1-a/instances/nginx-d",
            "service_account": [
              {
                "email": "954959632388-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "east-west",
              "nginx",
              "north-south",
              "ssh-mgmt"
            ],
            "tags_fingerprint": "d-4WKOZmu-w=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_instance.vm-firewall",
            "google_compute_network.vpc_externo",
            "google_compute_network.vpc_mgmt",
            "google_compute_network.vpc_multi_tenant",
            "google_compute_network.vpc_shared",
            "google_compute_network.vpc_single_tenant",
            "google_compute_shared_vpc_host_project.host_project",
            "google_compute_subnetwork.subnet-a",
            "google_compute_subnetwork.subnet-b",
            "google_compute_subnetwork.subnet-d",
            "google_compute_subnetwork.subnet-e",
            "google_compute_subnetwork.subnet-h",
            "google_compute_subnetwork.subnet-mgmt",
            "google_folder.default",
            "google_project_organization_policy.ip_forward_policy",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding",
            "module.service_project_d.data.google_bigquery_default_service_account.bq_sa",
            "module.service_project_d.data.google_project.project",
            "module.service_project_d.data.google_storage_project_service_account.gcs_sa",
            "module.service_project_d.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.service_project_d.google_compute_shared_vpc_service_project.service_projects",
            "module.service_project_d.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.service_project_d.google_project.project",
            "module.service_project_d.google_project_organization_policy.boolean",
            "module.service_project_d.google_project_organization_policy.list",
            "module.service_project_d.google_project_service.project_services",
            "module.service_project_d.google_project_service_identity.jit_si"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nginx-f",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221121",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/svc-f-1669813646/zones/us-central1-a/disks/nginx-f"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/svc-f-1669813646/zones/us-central1-a/instances/nginx-f",
            "instance_id": "4828309178280503500",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "enable-oslogin": "TRUE",
              "startup-script": "        #!/bin/bash\n        apt update -y\n        apt install -y nginx net-tools traceroute\n"
            },
            "metadata_fingerprint": "qiVESHaHjj4=",
            "name": "nginx-f",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-multi-tenant",
                "network_ip": "192.168.60.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-f",
                "subnetwork_project": "host-project-1669813646"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-mgmt",
                "network_ip": "172.16.60.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-mgmt",
                "subnetwork_project": "host-project-1669813646"
              }
            ],
            "project": "svc-f-1669813646",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/svc-f-1669813646/zones/us-central1-a/instances/nginx-f",
            "service_account": [
              {
                "email": "664511815041-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "east-west",
              "nginx",
              "north-south",
              "ssh-mgmt"
            ],
            "tags_fingerprint": "d-4WKOZmu-w=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_instance.vm-firewall",
            "google_compute_network.vpc_externo",
            "google_compute_network.vpc_mgmt",
            "google_compute_network.vpc_multi_tenant",
            "google_compute_network.vpc_shared",
            "google_compute_network.vpc_single_tenant",
            "google_compute_shared_vpc_host_project.host_project",
            "google_compute_subnetwork.subnet-a",
            "google_compute_subnetwork.subnet-b",
            "google_compute_subnetwork.subnet-e",
            "google_compute_subnetwork.subnet-f",
            "google_compute_subnetwork.subnet-h",
            "google_compute_subnetwork.subnet-mgmt",
            "google_folder.default",
            "google_project_organization_policy.ip_forward_policy",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding",
            "module.service_project_f.data.google_bigquery_default_service_account.bq_sa",
            "module.service_project_f.data.google_project.project",
            "module.service_project_f.data.google_storage_project_service_account.gcs_sa",
            "module.service_project_f.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.service_project_f.google_compute_shared_vpc_service_project.service_projects",
            "module.service_project_f.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.service_project_f.google_project.project",
            "module.service_project_f.google_project_organization_policy.boolean",
            "module.service_project_f.google_project_organization_policy.list",
            "module.service_project_f.google_project_service.project_services",
            "module.service_project_f.google_project_service_identity.jit_si"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221121",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/zones/us-central1-a/disks/vm-firewall"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/host-project-1669813646/zones/us-central1-a/instances/vm-firewall",
            "instance_id": "4098623423287800264",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "startup-script": "        #!/bin/bash\n        # networking tools\n        apt -y update\n        apt install -y net-tools traceroute\n        # static routes\n        route add -net 192.168.30.0 netmask 255.255.255.0 gw 192.168.20.1\n        route add -net 192.168.40.0 netmask 255.255.255.0 gw 192.168.20.1\n        route add -net 192.168.60.0 netmask 255.255.255.0 gw 192.168.50.1\n        route add -net 192.168.70.0 netmask 255.255.255.0 gw 192.168.50.1\n        route add -net 19 [...]
            },
            "metadata_fingerprint": "91JIL6JeKhQ=",
            "name": "vm-firewall",
            "network_interface": [
              {
                "alias_ip_range": [
                  {
                    "ip_cidr_range": "192.168.10.96/28"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-externo",
                "network_ip": "192.168.10.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-a",
                "subnetwork_project": "host-project-1669813646"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-shared",
                "network_ip": "192.168.20.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-b",
                "subnetwork_project": "host-project-1669813646"
              },
              {
                "name": "nic2",
                "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-multi-tenant",
                "network_ip": "192.168.50.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-e",
                "subnetwork_project": "host-project-1669813646"
              },
              {
                "name": "nic3",
                "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-single-tenant",
                "network_ip": "192.168.80.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-h",
                "subnetwork_project": "host-project-1669813646"
              }
            ],
            "project": "host-project-1669813646",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/zones/us-central1-a/instances/vm-firewall",
            "service_account": [
              {
                "email": "192924514483-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "east-west",
              "fw",
              "north-south",
              "ssh-mgmt"
            ],
            "tags_fingerprint": "aXUD5FY2N2A=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_subnetwork.subnet-a",
            "google_compute_subnetwork.subnet-b",
            "google_compute_subnetwork.subnet-e",
            "google_compute_subnetwork.subnet-h",
            "google_project_organization_policy.ip_forward_policy",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_project.project",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_externo",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/host-project-1669813646/global/networks/vpc-externo",
            "mtu": 1460,
            "name": "vpc-externo",
            "project": "host-project-1669813646",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-externo"
          },
          "dependencies": [
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/host-project-1669813646/global/networks/vpc-mgmt",
            "mtu": 1460,
            "name": "vpc-mgmt",
            "project": "host-project-1669813646",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-mgmt"
          },
          "dependencies": [
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_multi_tenant",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/host-project-1669813646/global/networks/vpc-multi-tenant",
            "mtu": 1460,
            "name": "vpc-multi-tenant",
            "project": "host-project-1669813646",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-multi-tenant"
          },
          "dependencies": [
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/host-project-1669813646/global/networks/vpc-shared",
            "mtu": 1460,
            "name": "vpc-shared",
            "project": "host-project-1669813646",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-shared"
          },
          "dependencies": [
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_single_tenant",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/host-project-1669813646/global/networks/vpc-single-tenant",
            "mtu": 1460,
            "name": "vpc-single-tenant",
            "project": "host-project-1669813646",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-single-tenant"
          },
          "dependencies": [
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "east-west-vpc-multi-tenant",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "192.168.0.0/16",
            "id": "projects/host-project-1669813646/global/routes/east-west-vpc-multi-tenant",
            "name": "east-west-vpc-multi-tenant",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-multi-tenant",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "192.168.50.10",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "host-project-1669813646",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/routes/east-west-vpc-multi-tenant",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.vm-firewall",
            "google_compute_network.vpc_externo",
            "google_compute_network.vpc_multi_tenant",
            "google_compute_network.vpc_shared",
            "google_compute_network.vpc_single_tenant",
            "google_compute_shared_vpc_host_project.host_project",
            "google_compute_subnetwork.subnet-a",
            "google_compute_subnetwork.subnet-b",
            "google_compute_subnetwork.subnet-e",
            "google_compute_subnetwork.subnet-h",
            "google_folder.default",
            "google_project_organization_policy.ip_forward_policy",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "east-west-vpc-shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "192.168.0.0/16",
            "id": "projects/host-project-1669813646/global/routes/east-west-vpc-shared",
            "name": "east-west-vpc-shared",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-shared",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "192.168.20.10",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "host-project-1669813646",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/routes/east-west-vpc-shared",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.vm-firewall",
            "google_compute_network.vpc_externo",
            "google_compute_network.vpc_multi_tenant",
            "google_compute_network.vpc_shared",
            "google_compute_network.vpc_single_tenant",
            "google_compute_shared_vpc_host_project.host_project",
            "google_compute_subnetwork.subnet-a",
            "google_compute_subnetwork.subnet-b",
            "google_compute_subnetwork.subnet-e",
            "google_compute_subnetwork.subnet-h",
            "google_folder.default",
            "google_project_organization_policy.ip_forward_policy",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "east-west-vpc-single-tenant",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "192.168.0.0/16",
            "id": "projects/host-project-1669813646/global/routes/east-west-vpc-single-tenant",
            "name": "east-west-vpc-single-tenant",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-single-tenant",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "192.168.80.10",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "host-project-1669813646",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/routes/east-west-vpc-single-tenant",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.vm-firewall",
            "google_compute_network.vpc_externo",
            "google_compute_network.vpc_multi_tenant",
            "google_compute_network.vpc_shared",
            "google_compute_network.vpc_single_tenant",
            "google_compute_shared_vpc_host_project.host_project",
            "google_compute_subnetwork.subnet-a",
            "google_compute_subnetwork.subnet-b",
            "google_compute_subnetwork.subnet-e",
            "google_compute_subnetwork.subnet-h",
            "google_folder.default",
            "google_project_organization_policy.ip_forward_policy",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "north-south-vpc-multi-tenant",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/host-project-1669813646/global/routes/north-south-vpc-multi-tenant",
            "name": "north-south-vpc-multi-tenant",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-multi-tenant",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "192.168.50.10",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "host-project-1669813646",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/routes/north-south-vpc-multi-tenant",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.vm-firewall",
            "google_compute_network.vpc_externo",
            "google_compute_network.vpc_multi_tenant",
            "google_compute_network.vpc_shared",
            "google_compute_network.vpc_single_tenant",
            "google_compute_shared_vpc_host_project.host_project",
            "google_compute_subnetwork.subnet-a",
            "google_compute_subnetwork.subnet-b",
            "google_compute_subnetwork.subnet-e",
            "google_compute_subnetwork.subnet-h",
            "google_folder.default",
            "google_project_organization_policy.ip_forward_policy",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "north-south-vpc-shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/host-project-1669813646/global/routes/north-south-vpc-shared",
            "name": "north-south-vpc-shared",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-shared",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "192.168.20.10",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "host-project-1669813646",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/routes/north-south-vpc-shared",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.vm-firewall",
            "google_compute_network.vpc_externo",
            "google_compute_network.vpc_multi_tenant",
            "google_compute_network.vpc_shared",
            "google_compute_network.vpc_single_tenant",
            "google_compute_shared_vpc_host_project.host_project",
            "google_compute_subnetwork.subnet-a",
            "google_compute_subnetwork.subnet-b",
            "google_compute_subnetwork.subnet-e",
            "google_compute_subnetwork.subnet-h",
            "google_folder.default",
            "google_project_organization_policy.ip_forward_policy",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "north-south-vpc-single-tenant",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/host-project-1669813646/global/routes/north-south-vpc-single-tenant",
            "name": "north-south-vpc-single-tenant",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-single-tenant",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "192.168.80.10",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "host-project-1669813646",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/routes/north-south-vpc-single-tenant",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.vm-firewall",
            "google_compute_network.vpc_externo",
            "google_compute_network.vpc_multi_tenant",
            "google_compute_network.vpc_shared",
            "google_compute_network.vpc_single_tenant",
            "google_compute_shared_vpc_host_project.host_project",
            "google_compute_subnetwork.subnet-a",
            "google_compute_subnetwork.subnet-b",
            "google_compute_subnetwork.subnet-e",
            "google_compute_subnetwork.subnet-h",
            "google_folder.default",
            "google_project_organization_policy.ip_forward_policy",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2022-11-30T05:09:26.236-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/host-project-1669813646/regions/us-central1/routers/router-vpc-externo",
            "name": "router-vpc-externo",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-externo",
            "project": "host-project-1669813646",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/routers/router-vpc-externo"
          },
          "dependencies": [
            "google_compute_network.vpc_externo",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "host-project-1669813646/us-central1/router-vpc-externo/nat-router-externo",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-router-externo",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "host-project-1669813646",
            "region": "us-central1",
            "router": "router-vpc-externo",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_externo",
            "google_compute_router.router",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-30T05:09:35.392-08:00",
            "gateway_address": "192.168.10.1",
            "id": "projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-a",
            "ip_cidr_range": "192.168.10.0/24",
            "name": "subnet-a",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-externo",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "host-project-1669813646",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.110.0/24",
                "range_name": "range-dnat"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-a",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_externo",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-30T05:09:25.325-08:00",
            "gateway_address": "192.168.20.1",
            "id": "projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-b",
            "ip_cidr_range": "192.168.20.0/24",
            "name": "subnet-b",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-shared",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "host-project-1669813646",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-b",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_shared",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-30T05:09:25.698-08:00",
            "gateway_address": "192.168.30.1",
            "id": "projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-c",
            "ip_cidr_range": "192.168.30.0/24",
            "name": "subnet-c",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-shared",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "host-project-1669813646",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-c",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_shared",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-d",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-30T05:09:24.997-08:00",
            "gateway_address": "192.168.40.1",
            "id": "projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-d",
            "ip_cidr_range": "192.168.40.0/24",
            "name": "subnet-d",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-shared",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "host-project-1669813646",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-d",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_shared",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-e",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-30T05:09:25.446-08:00",
            "gateway_address": "192.168.50.1",
            "id": "projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-e",
            "ip_cidr_range": "192.168.50.0/24",
            "name": "subnet-e",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-multi-tenant",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "host-project-1669813646",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-e",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_multi_tenant",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-f",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-30T05:09:25.572-08:00",
            "gateway_address": "192.168.60.1",
            "id": "projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-f",
            "ip_cidr_range": "192.168.60.0/24",
            "name": "subnet-f",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-multi-tenant",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "host-project-1669813646",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-f",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_multi_tenant",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-g",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-30T05:09:25.998-08:00",
            "gateway_address": "192.168.70.1",
            "id": "projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-g",
            "ip_cidr_range": "192.168.70.0/24",
            "name": "subnet-g",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-multi-tenant",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "host-project-1669813646",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-g",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_multi_tenant",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-h",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-30T05:09:39.018-08:00",
            "gateway_address": "192.168.80.1",
            "id": "projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-h",
            "ip_cidr_range": "192.168.80.0/24",
            "name": "subnet-h",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-single-tenant",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "host-project-1669813646",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-h",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_single_tenant",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-i",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-30T05:09:37.289-08:00",
            "gateway_address": "192.168.90.1",
            "id": "projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-i",
            "ip_cidr_range": "192.168.90.0/24",
            "name": "subnet-i",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-single-tenant",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "host-project-1669813646",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-i",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_single_tenant",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-j",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-30T05:09:39.439-08:00",
            "gateway_address": "192.168.100.1",
            "id": "projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-j",
            "ip_cidr_range": "192.168.100.0/24",
            "name": "subnet-j",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-single-tenant",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "host-project-1669813646",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-j",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_single_tenant",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-30T05:09:39.493-08:00",
            "gateway_address": "172.16.0.1",
            "id": "projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-mgmt",
            "ip_cidr_range": "172.16.0.0/16",
            "name": "subnet-mgmt",
            "network": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/global/networks/vpc-mgmt",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "host-project-1669813646",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-project-1669813646/regions/us-central1/subnetworks/subnet-mgmt",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_mgmt",
            "google_compute_shared_vpc_host_project.host_project",
            "google_folder.default",
            "module.host_project.data.google_bigquery_default_service_account.bq_sa",
            "module.host_project.data.google_project.project",
            "module.host_project.data.google_storage_project_service_account.gcs_sa",
            "module.host_project.google_access_context_manager_service_perimeter_resource.bridge",
            "module.host_project.google_access_context_manager_service_perimeter_resource.standard",
            "module.host_project.google_bigquery_dataset_iam_member.bq-sinks-binding",
            "module.host_project.google_compute_project_metadata_item.oslogin_meta",
            "module.host_project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.host_project.google_compute_shared_vpc_service_project.service_projects",
            "module.host_project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.host_project.google_essential_contacts_contact.contact",
            "module.host_project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.host_project.google_logging_project_exclusion.logging-exclusion",
            "module.host_project.google_logging_project_sink.sink",
            "module.host_project.google_monitoring_monitored_project.primary",
            "module.host_project.google_project.project",
            "module.host_project.google_project_iam_binding.authoritative",
            "module.host_project.google_project_iam_custom_role.roles",
            "module.host_project.google_project_iam_member.additive",
            "module.host_project.google_project_iam_member.bucket-sinks-binding",
            "module.host_project.google_project_iam_member.oslogin_admins",
            "module.host_project.google_project_iam_member.oslogin_compute_viewer",
            "module.host_project.google_project_iam_member.oslogin_iam_serviceaccountuser",
            "module.host_project.google_project_iam_member.oslogin_users",
            "module.host_project.google_project_organization_policy.boolean",
            "module.host_project.google_project_organization_policy.list",
            "module.host_project.google_project_service.project_services",
            "module.host_project.google_project_service_identity.jit_si",
            "module.host_project.google_pubsub_topic_iam_member.pubsub-sinks-binding",
            "module.host_project.google_resource_manager_lien.lien",
            "module.host_project.google_storage_bucket_iam_member.gcs-sinks-binding"
          ]
        }
      ]
    }
  ]
}